# simpleticker

./: CMakeLists.txt  README.md
src/: main.cpp  websocket-client.hpp
tests/: main.cpp  websocket-client.cpp
